--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
   "author": "Aaron Ross <superhawk610@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bulma": "^0.7.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "reason-react": ">=0.4.0"
   },
   "devDependencies": {
     "bs-platform": "^4.0.7",
+    "css-loader": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8"
