--- a/package.json
+++ b/package.json
@@ -3,17 +3,9 @@
   "description": "Track your progress toward finishing all those shows on your watch list!",
   "version": "0.1.0",
   "scripts": {
-    "build": "bsb -make-world",
-    "start": "bsb -make-world -w",
-    "clean": "bsb -clean-world",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack": "webpack -w",
-    "webpack:production": "NODE_ENV=production webpack",
-    "server": "webpack-dev-server"
+    "build": "parcel build ./src/index.html",
+    "dev": "parcel ./src/index.html ./src/*.re"
   },
-  "keywords": [
-    "BuckleScript"
-  ],
   "author": "Aaron Ross <superhawk610@gmail.com>",
   "license": "MIT",
   "dependencies": {
@@ -24,11 +16,7 @@
   },
   "devDependencies": {
     "bs-platform": "^4.0.7",
-    "css-loader": "^1.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.0.1",
-    "webpack-cli": "^3.1.1",
-    "webpack-dev-server": "^3.1.8"
+    "bsb-js": "^1.1.7",
+    "parcel-bundler": "^1.10.3"
   }
 }
