--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "devDependencies": {
     "bs-platform": "^4.0.7",
     "bsb-js": "^1.1.7",
-    "parcel-bundler": "^1.10.3"
+    "parcel-bundler": "^1.10.3",
+    "react-hot-loader": "^4.3.11",
+    "sass": "^1.14.3",
+    "stylus": "^0.54.5"
   }
 }
